--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>graph</title>
+    <title>账目管理</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body style="margin:0">
+    <div id="admin"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
